--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -95,9 +95,9 @@ footer {
 
 		  		Last Name: &nbsp&nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="last_name"><br><br>
 
-		  		Department: &nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="pri_skill"><br><br>
+		  		Department: &nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="department"><br><br>
 
-		  		Address: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="location"><br><br>
+		  		Address: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="address"><br><br>
 
 		  		Profile Image: <input type=file name="emp_image_file" style="height:25px;font-size:14pt;color:grey;"> </br></br>
 
