--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -98,6 +98,8 @@ footer {
 		  		Department: &nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="department"><br><br>
 
 		  		Address: &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input style="height:25px;font-size:14pt;color:grey;" type="text" name="address"><br><br>
+			  	
+	                        Basic Salary: <input type=number name="basic_salary" style="height:25px;font-size:14pt;color:grey;"> </br></br>
 
 		  		Profile Image: <input type=file name="emp_image_file" style="height:25px;font-size:14pt;color:grey;"> </br></br>
 
