--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -79,7 +79,7 @@ footer {
   <nav>
     <ul>
       <li><a href="#">Attendance</a></li>
-      <li><button type="submit" formaction="/getemp" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GET EMPLOYEE INFORMATION</button></li>
+      <li><a href="/getemp">Get Employees Details</a></li>
     </ul>
   </nav>
 
