--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -1,41 +1,140 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Employee Information</title>
+<title>Get Employee Details</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 20%;
+  height: 680px;
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+detail {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, detail {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
 </head>
-<center>
-	<font color="black" size="5" style="font-family: avenir">
+<body>
 
-		<h1 style="color: DodgerBlue">Employee Information</h1>
+<header>
+  <h2>Employee Details</h2>
+</header>
 
-		<body bgcolor="lightgrey">
+<section>
+  <nav>
+    <ul>
+      <li><a href="#">Attendance</a></li>
+      <li><a href="/editot">Check Employee Salary</a></li>
+      <li><a href="/getemp">Get Employees Details</a></li>
+    </ul>
+  </nav>
 
-			<form>
+  <detail>
 
-				<div>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>Employee Information</title>
+	</head>
+				<form>
+	
+					<div>
+	
+						  Employee ID:<br> {{ id }} <br><br>
+	
+						  First Name:<br> {{ fname }} <br><br>
+	
+						  Last Name:<br> {{ lname }} <br><br>
+	
+						  Department:<br> {{ department }} <br><br>
+	
+						  Address:<br> {{ address }} <br><br>
+	
+						Annual Leave:<br> {{ anleave }} <br><br>
+	
+						Medical Leave:<br> {{ medleave }} <br><br>
+	
+						Unpaid Leave:<br> {{ unleave }} <br><br>
+	
+						OT Hour:<br> {{ othour }} <br><br>
+	
+						Salary:<br> {{ salary }} <br><br>
+	
+						  Image URL: <br> {{ image_url }} <br><br>
+	
+						  <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://3.134.115.108:80/getemp">Delete Employee</button><br><br>
+	
+					  </div>
+	
+				</form>
+	
+			</body>
+	</html>
+	
 
-					{{ var }}
+  </detail>
 
-			  		Employee ID:<br> {{ id }} <br><br>
+</section>
 
-			  		First Name:<br> {{ fname }} <br><br>
+<footer>
+  <a href="/about">About Us</a>
+</footer>
 
-			  		Last Name:<br> {{ lname }} <br><br>
-
-			  		Primary Interest:<br> {{ interest }} <br><br>
-
-			  		Location:<br> {{ location }} <br><br>
-
-			  		Image URL: <br> {{ image_url }} <br><br>
-
-			  		<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="http://3.134.115.108:80/getemp">RESET</button><br><br>
-
-			  	</div>
-
-			</form>
-
-		</body>
-
-	</font>
-</center>
+</body>
 </html>
