--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -1,13 +1,95 @@
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<center>
-	<font color="DodgerBlue" size="5" style="font-family: avenir">
-		<body bgcolor="lightgrey">
-			<h1>SAVE SUCCESSFUL</h1><br>
+<title>Add Employee Output</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #666;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 20%;
+  height: 450px;
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+detail {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+  height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #777;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, detail {
+    width: 100%;
+    height: auto;
+  }
+}
+</style>
+</head>
+<body>
+
+<header>
+  <h2>Employee Profile Save Successfully</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="#">Attendance</a></li>
+      <li><a href="/editot">Check Employee Salary</a></li>
+      <li><a href="/getemp">Get Employees Details</a></li>
+    </ul>
+  </nav>
+
+  <detail>
+    
 			<h2>Following Employee has been added to the database</h2><br>
-			            <h2>{{ var }}</h2><br>
-                        <h2>{{ name }}</h2><br>
+			
+                        <h2>{{ name }}</h2></br></br></br></br></br></br></br></br></br></br></br></br>
 
 			<title>Add Emp Output</title>
 				<form action="/AddEmp.html" autocomplete="on" method = "GET">
@@ -15,11 +97,14 @@
 					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
 
 				</form>
-		</body>
-	</font>
-</center>
-</head>
-<body>
+
+  </detail>
+
+</section>
+
+<footer>
+  <a href="/about">About Us</a>
+</footer>
 
 </body>
 </html>
