--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -92,7 +92,7 @@ footer {
                         <h2>{{ name }}</h2></br></br></br></br></br></br></br></br></br></br></br></br>
 
 			<title>Add Emp Output</title>
-				<form action="/AddEmp.html" autocomplete="on" method = "GET">
+				<form action="AddEmp.html" autocomplete="on" method = "GET">
 					
 					<button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;">GO BACK</button><br><br>
 
