--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -78,6 +78,7 @@ footer {
 <section>
   <nav>
     <ul>
+      <li><a href="/home">Home</a></li>
       <li><a href="#">Attendance</a></li>
       <li><a href="/editot">Check Employee Salary</a></li>
       <li><a href="/getemp">Get Employees Details</a></li>
