--- a/templates/RemEmp.html
+++ b/templates/RemEmp.html
@@ -87,7 +87,7 @@ footer {
 
   <detail>
 
-		<form action="/deletedata" autocomplete="on" method="POST">
+		<form action="/removedata" autocomplete="on" method="POST">
 
 			<h2 style="color: black">Enter Employee ID that you wish to remove</h2>
 
