--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -118,7 +118,7 @@ footer {
 	
 						Image URL: <br> {{ image_url }} <br><br>
 	
-						  <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/getemp">Delete Employee</button><br><br>
+						  <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/deletedata">Delete Employee</button><br><br>
 	
 					  </div>
 	
