--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -116,7 +116,7 @@ footer {
 	
 						Salary:<br> {{ salary }} <br><br>
 	
-						Image URL: <br> {{ image_url }} <br><br><br><br><br><br><br>
+						Image URL: <br> {{ image_url }} <br><br><br><br><br>
 	
 						  <button type="submit" style="background: grey; height: 45px; width: 200px; color:white; font:oblique;" formaction="/deletedata">Delete Employee</button><br><br>
 	
